--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://85c62bac-0cf6-4ed5-8a89-a6b3e4565b39.preview.emergentagent.com
 WDS_SOCKET_PORT=443
